# copyslab

./: .gitignore  README.md  package-lock.json  package.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/backup/: index.html  main.js  style.css
